objects/Service_Guarantee__c.object
<CustomObject>
    <fields>
        <fullName>Routing_Table__c</fullName>
        <label>Routing Table</label>
        <referenceTo>Routing_Table__c</referenceTo>
        <relationshipName>Service_Guarantees</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Service_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Guarantee_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Service Guarantee Key</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Service_Guaranteed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Guaranteed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <label>Service</label>
        <referenceTo>Service__c</referenceTo>
        <relationshipName>Service_Guarantees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Service Not Guaranteed</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Service Not Guaranteed</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Not Guaranteed</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>